# qt-node-editor-tutorial

./: .gitignore  CHANGELOG.md  README.md  TODO.md  pyproject.toml
conf/: logging_config.template.toml
docs/: make.ps1
docs/source/: coding_standards.md  conf.py  evaluation.rst  events.rst  index.rst  serialization.rst
docs/source/_templates/apidoc/: README.md  module.rst.jinja  package.rst.jinja
examples/example_calculator/: calc_conf.py  calc_conf_nodes.py  calc_drag_listbox.py  calc_node_base.py  calc_sub_window.py  calc_window.py  main.py  util_datastream.py
examples/example_calculator/nodes/: __init__.py  input.py  operations.py  output.py
examples/example_calculator/qss/: nodeeditor-dark.qss  nodeeditor.qss  nodeeditor.styl
examples/example_test/: graph2.json  main.py
src/opencv_flow/: main.py  node_editor_wnd.py  node_graphics_scene.py  node_graphics_view.py
src/qt_node_editor/: main.py  node_content_widget.py  node_edge.py  node_editor_widget.py  node_editor_window.py  node_editor_wnd.py  node_graphics_cutline.py  node_graphics_edge.py  node_graphics_node.py  node_graphics_scene.py  node_graphics_socket.py  node_graphics_view.py  node_node.py  node_scene.py  node_scene_clipboard.py  node_scene_history.py  node_serializable.py  node_socket.py  utils.py
src/qt_node_editor/qss/: nodestyle.qss
