[tool.poetry]
name = "qt-node-editor"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "qt_node_editor", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10, <3.13"
qtpy = "^2.4.1"


[tool.poetry.group.dev.dependencies]
pyqt6 = "^6.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
