[project]
name = "qt-node-editor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "qtpy>=2.4.2",
    "typedload>=2.39",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyqt6>=6.8.0",
]
